# driftshell

./: AGENTS.md  Cargo.toml  JOURNAL.md
src/: app.rs  main.rs
src/bar/: mod.rs
src/dock/: mod.rs
src/driftwm/: config.rs  ipc.rs  mod.rs
src/launcher/: mod.rs
src/settings/: mod.rs
src/shared/: apps.rs  icons.rs  mod.rs
src/study/: 2026-06-20-01-architecture.md  2026-06-20-02-launcher.md  2026-06-20-02-settings-window.md
src/tray/: mod.rs
src/wallpaper/: mod.rs
