[package]
name = "driftshell"
version = "0.1.0"
edition = "2024"

[dependencies]
calloop = "0.14.4"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
iced = { version = "0.14.0", features = ["tokio", "wgpu"] }
iced_layershell = "0.18.1"
iced_widget = "0.14.2"
log = "0.4.32"
serde = "1.0.228"
serde_json = "1.0.150"
smithay-client-toolkit = "0.20.0"
tokio = "1.52.3"
toml = "1.1.2"
wayland-client = "0.31.14"
xdg = "3.0.0"
zbus = "5.16.0"
